syntax = "proto3";

package pulseproof;

message CandidateEvent {
  string transaction_hash = 1;
  uint64 block_number = 2;
  uint64 log_index = 3;
  string contract_address = 4;
  string event_signature = 5;
  string event_type  = 6; // "Transfer","Approval","Swap","Permit","FlashLoan"
  string metadata    = 7; // optional JSON string (topics, data)
}

message CandidateEvents {
  repeated CandidateEvent events = 1;
}

